Fix leveling page and add all recent css changes to light theme

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_base.scss
@@ -180,26 +180,6 @@ a.anchor {
 /* Utilities
 ============================================== */
 
-.sr-only {
-	position: absolute;
-	@include sizing(1px, 1px);
-	margin: -1px;
-	padding: 0;
-	overflow: hidden;
-	clip: rect(0, 0, 0, 0);
-	border: 0;
-}
-
-.sr-only-focusable {
-	&:active, &:focus {
-		position: static;
-		@include sizing(auto, auto);;
-		margin: 0;
-		overflow: visible;
-		clip: auto;
-	}
-}
-
 .clearfix, .inner {
 	@include clearfix('&');
 }
@@ -227,16 +207,19 @@ a.anchor {
 	@include position($type: absolute, $top: -20px);
 }
 
-/* Smilies and Emojis
+/* Smilies, Emojis & Topic Icons
 ============================================== */
 
-.emoji, .smilies {
-	@include inline-block(text-bottom);
-	max-width: 20px;
-	max-height: 20px;
+.emoji, .smilies, img[src*='images/icons'] {
+	display: inline-block;
 }
 
-.emoji {
-	min-height: 16px;
-	min-width: 16px;
+.emoji, .smilies {
+	vertical-align: text-bottom;
+	max-height: 23px;
+}
+
+img[src*='images/icons'] {
+	max-width: 20px;
+	max-height: 20px;
 }
