--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_other-sections.scss
@@ -191,9 +191,9 @@ dl.faq {
 			@include position($type: absolute, $top: 35px, $right: 30px);
 			font-size: 0;
 			&:after {
-				content: unicode($icon-x);
-				@include icon-font;
-				font-size: rem(20px);
+				@include icon-font($family: 'game');
+				content: unicode($misc-close);
+				font-size: rem(24px);
 				color: $color-00;
 			}
 		}
@@ -240,32 +240,16 @@ dl.faq {
 	display: block;
 }
 
-.quick-links {
-	&.quick-links-both {
-		border-bottom: 1px dashed $color-01;
-		border-top: 1px dashed $color-01;
-		padding: 20px 0;
-	}
-	&.quick-links-bottom {
-		border-bottom: 1px dashed $color-01;
-		padding: 0 0 20px 0;
-	}
-	&.quick-links-top {
-		border-top: 1px dashed $color-01;
-		padding: 20px 0 0 0;
-	}
-	&.quick-links-filter {
-		position: relative;
-		padding-right: 200px;
-		.card-filter {
-			@include position($type: absolute, $top: auto, $right: 0);
-		}
-	}
-}
-
 .page-content-section {
 	border-top: 1px dashed $color-01;
 	padding: 20px 0 0 0;
+}
+
+.pages-content {
+	&  > .page-content-section:first-child, & > .column3 + .column4 .page-content-section, & > .banner-aligned + .page-content-section {
+		border-top: 0;
+		padding-top: 0;
+	}
 }
 
 .content-image {
@@ -306,45 +290,6 @@ dl.faq {
 			}
 			&:nth-child(5n+1) {
 				clear: left;
-			}
-		}
-	}
-}
-
-.chart-grid {
-	margin: 0 0 20px 0;
-	.no-chart-data {
-		margin: 0;
-		font-style: italic;
-	}
-	.chart-row {
-		@include flex-flow(wrap);
-		margin: 0 -2px;
-		.chart-data {
-			text-align: center;
-			@include flex(grow);
-			width: 16.6666%;
-			padding: 0 2px 4px 2px;
-			.chart-data-wrap {
-				height: 100%;
-				padding: 10px 20px;
-			}
-			&.chart-check .chart-data-wrap {
-				background: $color-09;
-			}
-			&.chart-remove .chart-data-wrap {
-				background: $color-08;
-			}
-			.chart-label, .icon {
-				color: $light-03;
-			}
-			.chart-label {
-				display: block;
-				margin: 0 0 2px 0;
-				font-size: rem(16px);
-			}
-			.icon {
-				font-size: rem(22px);
 			}
 		}
 	}
@@ -456,17 +401,21 @@ dl.faq {
 	margin: 0 -10px;
 	.card-block {
 		width: 33.33%;
-		@include flex();
+		@include flex;
 		padding: 0 10px;
 		margin: 0 0 20px 0;
 		@include toggle-content(show, true);
+		&.toggle-hide {
+			@include position($type: absolute, $top: -9999px, $left: -9999px);
+			@include toggle-content(hide, false);
+		}
+		&.card-full {
+			@include flex(base);
+		}
 		.icon-wrapper {
 			float: left;
 			clear: right;
 			padding: 0 15px 20px 0;
-		}
-		dl.details {
-			clear: both;
 		}
 		.card-completed-text {
 			margin: -10px 0 20px 0;
@@ -476,23 +425,27 @@ dl.faq {
 				margin: 0 5px 0 0;
 			}
 		}
-		&.card-changed {
-			.icon-round {
-				background: $color-10;
-			}
-			.card-description, dl.details {
-				opacity: 0.50;
-			}
-		}
-		&.toggle-hide {
-			@include position($type: absolute, $top: -9999px, $left: -9999px);
-			@include toggle-content(hide, false);
+	}
+}
+
+.section-page-achievements, .section-page-leveling {
+	.card-grid .card-block.card-changed {
+		.card-description, dl.details {
+			opacity: 0.50;
 		}
 	}
 }
 
-.card-filter .card-filter-button {
-	cursor: pointer;
+.section-page-halfbreed .card-grid .card-block .card-description {
+	min-height: 42px;
+}
+
+.card-filter {
+	margin: 0 0 20px 0;
+	text-align: center;
+	.card-filter-button {
+		cursor: pointer;
+	}
 }
 
 /* Pages - Map
@@ -605,27 +558,6 @@ dl.faq {
 	}
 }
 
-/* Pages - Stat Charts
-============================================== */
-
-.stat-chart {
-	overflow: hidden;
-	@include flex-flow(row wrap);
-	margin: 0 0 20px 0;
-	.stat-chart-column {
-		@include flex;
-		width: 25%;
-		.topiclist > li {
-			border-left: 1px dashed $color-01;
-			position: relative;
-			left: -1px;
-			dl dt.stat-chart-level {
-				max-width: 100px;
-			}
-		}
-	}
-}
-
 /* Thanks List
 ============================================== */
 
@@ -684,7 +616,7 @@ div[id*='list_thanks'] {
 	}
 }
 
-.section-thanks-search {
+.section-search-thanks {
 	h2 + p .arrow-left, .post ul.searchresults li a {
 		&:before {
 			color: $color-00;
@@ -692,11 +624,11 @@ div[id*='list_thanks'] {
 		}
 	}
 	h2 + p .arrow-left:before {
-		content: unicode($icon-chevron-left);
+		content: unicode($icon-angle-left);
 		margin: 0 10px 0 0;
 	}
 	.post ul.searchresults li a:before {
-		content: unicode($icon-chevron-right);
+		content: unicode($icon-angle-right);
 		margin: 0 0 0 10px;
 	}
 }
