--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_profile.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_profile.scss
@@ -21,9 +21,11 @@
 				display: block;
 				font-size: rem(22px);
 				font-variant: small-caps;
-				margin: 10px 0 0 0;
 			}
 		}
+		.avatar-container > .avatar {
+			margin: 0 0 10px 0;
+		}		
 	}
 	dd {
 		margin: 0 0 3px 0;
