--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -270,7 +270,7 @@ a.top {
 	}
 }
 
-/* Breadcrumbs
+/* Quick Links
 ============================================== */
 
 @include respond-min(em(769)) {
