--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_mixins.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_mixins.scss
@@ -225,6 +225,13 @@
 	}
 }
 
+// Responsive min-width media query
+@mixin respond-min($breakpoint) {
+	@media only screen and (min-width: $breakpoint) {
+		@content;
+	}
+}
+
 // Sizing for elements
 @mixin sizing($width, $height) {
 	width: $width;
@@ -247,16 +254,14 @@
 			padding: 0 20px 0 0;
 			&:after {
 				@include icon-font;
-				@include position($type: absolute, $right: 0);
+				@include position($type: absolute, $top: 0, $right: 0);
 			}
 		}
 		&[href*='sd=d']:after {
-			content: unicode($icon-sort-desc);
-			top: -4px;
+			content: unicode($icon-angle-down);
 		}
 		&[href*='sd=a']:after {
-			content: unicode($icon-sort-asc);
-			top: 3px;
+			content: unicode($icon-angle-up);
 		}
 	}
 }
