--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_viewtopic.scss
@@ -102,9 +102,6 @@
 		padding: 0 150px 0 0;
 	}
 	h3 img[src*='images/icons'] {
-		max-width: 20px;
-		max-height: 20px;
-		display: inline-block;
 		margin: 0 5px 0 0;
 		@include position($type: relative, $top: 2px);
 	}
@@ -141,15 +138,55 @@
 		.bbcode-strike-through {
 			text-decoration: line-through;
 		}
-		.bbcode-center {
-			text-align: center;
+		.bbcode-text {
 			display: block;
-			img {
-				margin: 0 auto;
-			}
 			& + br + br {
 				display: none;
 			}
+		}
+		.bbcode-text-center {
+			text-align: center;
+		}
+		.bbcode-text-justify {
+			text-align:justify;
+		}
+		.bbcode-text-left {
+			text-align: left;
+		}
+		.bbcode-text-right {
+			text-align: right;
+		}
+		.bbcode-text-first-letter:first-letter, .bbcode-text-first-line:first-line {
+			line-height: 1;
+		}
+		.bbcode-text-first-letter:first-letter {
+			font-family: $font-03;
+			font-size: rem(80px);
+			padding: 0 20px 10px 10px;
+			float: left;
+			clear: left;
+		}
+		.bbcode-text-first-line:first-line {
+			@include spectral-common;
+			font-size: rem(24px);
+		}
+		.bbcode-image {
+			& + br, & + br + br {
+				display: none;
+			}
+		}
+		.bbcode-image-center {
+			margin: 0 auto;
+		}
+		.bbcode-image-left {
+			float: left;
+			clear: left;
+			margin: 0 20px 20px 0;
+		}
+		.bbcode-image-right {
+			float: right;
+			clear: right;
+			margin: 0 0 20px 20px;
 		}
 		.bbcode-hidden-text {
 			@include position($type: absolute, $top: -9999px, $left: -9999px);
