--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -219,7 +219,11 @@ a.anchor {
 	max-height: 23px;
 }
 
+.emoji {
+	max-width: 23px;
+}
+
 img[src*='images/icons'] {
 	max-width: 20px;
-	max-height: 20px;	
+	max-height: 20px;
 }
