--- a/khyeras/_dev/styles/khyeras_v1/template/index_body.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/index_body.html
@@ -39,6 +39,7 @@
 					<dd><input type="submit" tabindex="5" name="login" value="{L_LOGIN}" class="button2" /></dd>
 				</dl>
 				{S_LOGIN_REDIRECT}
+				{S_FORM_TOKEN_LOGIN}
 			</fieldset>
 		</form>
 	</div>
