--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -74,7 +74,7 @@ label {
 	display: block;
 	margin: 0 0 $ffs 0;
 	input[type='checkbox'], input[type='radio'], input[type='number'].inputbox {
-		margin-right:$ffs-half;
+		margin-right: $ffs-half;
 	}
 }
 
@@ -105,6 +105,58 @@ input[type='search']::-webkit-search-cancel-button {
 	cursor: pointer;
 }
 
+/* Styled form fields
+============================================== */
+
+.field-wrapper {
+	@include position($type: relative, $top: 2px);
+	display: inline-block;
+	@include sizing(16px, 16px);
+	input, .field-box {
+		display: block;
+		@include sizing(100%, 100%);
+	}
+	input[type='radio'], input[type='checkbox'] {
+		margin: 0;
+	}
+	input {
+		@include position($type: absolute, $top: 0, $left: 0, $z: 2);
+		opacity: 0;
+		&[disabled] + .field-box {
+			background: $color-11;
+		}
+	}
+	.field-box {
+		background: $white;
+		line-height: 16px;
+		text-align: center;
+		overflow: hidden;
+	}
+	&.field-wrapper-checkbox {
+		input:checked + .field-box:before {
+			@include icon-font($family: 'game');
+			color: $color-06;
+			content: unicode($misc-check);
+			font-size: rem(12px);
+		}
+		.field-box {
+			border-radius: 3px;
+		}
+	}
+	&.field-wrapper-radio {
+		input:checked + .field-box {
+			background: $color-06;
+			box-shadow: inset 0 0 0 4px $white;
+		}
+		.field-box {
+			border-radius: 100%;
+		}
+	}
+}
+
+label .field-wrapper {
+	margin-right: $ffs-half;
+}
 
 /* Search Box
 ============================================== */
