--- a/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_01.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_01.html
@@ -1,81 +1,27 @@
-{% set nav_about = 'about' %}
-{% set nav_lore = 'lore' %}
-{% set nav_setting = 'setting' %}
-{% set nav_gameplay = 'gameplay' %}
-
 <ul class="menu nav-menu" role="menu">
 	{% if KHY_LINKS %}
-		{% if KHY_LINKS[nav_about] %}
+		{% for key, link in KHY_LINKS if !link.parent %}
 			<li class="dropdown-container">
-				{{ function.create_nav_main(BOARD_URL ~ nav_about, KHY_LINKS[nav_about].label) }}
+				{{ function.create_nav_main('./' ~ key, link.label) }}
 				<div class="dropdown">
 					<ul class="dropdown-contents" role="menu">
-						{{ function.loop_nav_items(KHY_LINKS, nav_about ~ '-', BOARD_URL) }}
-						{{ function.create_nav_li(U_FAQ, lang('FORUM') ~ ' ' ~ lang('FAQ')) }}
-
-						{% if not S_IS_BOT && (S_DISPLAY_MEMBERLIST || U_TEAM) %}
-							{% if U_TEAM %}
-								{{ function.create_nav_li(U_TEAM, lang('THE_TEAM')) }}
-							{% endif %}
-						{% endif %}
-						{% if U_CONTACT_US %}
-							{{ function.create_nav_li(U_CONTACT_US, lang('CONTACT_US')) }}
+						{% for map_key, map_link in KHY_LINKS if (key ~ '-') in map_key && map_link.parent && map_link.parent is not iterable && map_key != 'lore-short-history' %}
+							{{ function.create_nav_li('./' ~ map_key, map_link.label) }}
+						{% endfor %}
+						{% if key == 'about' %}
+							{% include 'partials/nav_menu_about.html' %}
 						{% endif %}
 					</ul>
 				</div>
 			</li>
-		{% endif %}
-		{% if KHY_LINKS[nav_lore] %}
-			<li class="dropdown-container">
-				{{ function.create_nav_main(BOARD_URL ~ nav_lore, KHY_LINKS[nav_lore].label) }}
-				<div class="dropdown">
-					<ul class="dropdown-contents" role="menu">
-						{{ function.loop_nav_items(KHY_LINKS, nav_lore ~ '-', BOARD_URL) }}
-					</ul>
-				</div>
-			</li>
-		{% endif %}
-		{% if KHY_LINKS[nav_setting] %}
-			<li class="dropdown-container">
-				{{ function.create_nav_main(BOARD_URL ~ nav_setting, KHY_LINKS[nav_setting].label) }}
-				<div class="dropdown">
-					<ul class="dropdown-contents" role="menu">
-						{{ function.loop_nav_items(KHY_LINKS, nav_setting ~ '-', BOARD_URL) }}
-					</ul>
-				</div>
-			</li>
-		{% endif %}
-		{% if KHY_LINKS[nav_gameplay] %}
-			<li class="dropdown-container">
-				{{ function.create_nav_main(BOARD_URL ~ nav_gameplay, KHY_LINKS[nav_gameplay].label) }}
-				<div class="dropdown">
-					<ul class="dropdown-contents" role="menu">
-						{{ function.loop_nav_items(KHY_LINKS, nav_gameplay ~ '-', BOARD_URL) }}
-					</ul>
-				</div>
-			</li>
-		{% endif %}
+		{% endfor %}
 	{% endif %}
 	{% if not S_IS_BOT && (S_DISPLAY_MEMBERLIST || U_TEAM) %}
 		<li class="dropdown-container">
 			{{ function.create_nav_main(U_MEMBERLIST, lang('MEMBERLIST')) }}
 			<div class="dropdown">
 				<ul class="dropdown-contents" role="menu">
-					{% EVENT navbar_header_quick_links_before %}
-					{% if S_DISPLAY_SEARCH %}
-						{% if S_USER_LOGGED_IN %}
-							{{ function.create_nav_li(U_SEARCH_NEW, lang('SEARCH_NEW')) }}
-						{% endif %}
-						{% if S_LOAD_UNREADS %}
-							{{ function.create_nav_li(U_SEARCH_UNREAD, lang('SEARCH_UNREAD')) }}
-						{% endif %}
-							{{ function.create_nav_li(U_SEARCH_UNANSWERED, lang('SEARCH_UNANSWERED')) }}
-							{{ function.create_nav_li(U_SEARCH_ACTIVE_TOPICS, lang('SEARCH_ACTIVE_TOPICS')) }}
-					{% endif %}
-					{% if U_WATCH_FORUM_LINK %}
-						{{ function.create_nav_li(U_WATCH_FORUM_LINK, lang('WATCH_FORUM_TITLE')) }}
-					{% endif %}
-					{% EVENT navbar_header_quick_links_after %}
+					{% include 'partials/nav_menu_quick_links.html' %}
 				</ul>
 			</div>
 		</li>
