--- a/khyeras/styles/khyeras_v1/template/partials/nav_menu_02.html
+++ b/khyeras/styles/khyeras_v1/template/partials/nav_menu_02.html
@@ -47,7 +47,7 @@
 					{% if U_RESTORE_PERMISSIONS %}
 						{{ function.create_nav_li(U_RESTORE_PERMISSIONS, lang('RESTORE_PERMISSIONS')) }}
 					{% endif %}
-					{{ function.create_nav_li(U_LOGIN_LOGOUT, lang('LOGIN_LOGOUT'), 'accesskey="x"') }}
+					{{ function.create_nav_li(U_LOGIN_LOGOUT, lang('LOGIN_LOGOUT')) }}
 					{% EVENT navbar_header_profile_list_after %}
 				</ul>
 			</div>
