Finish sitemap, remove form field styles and js, update about page code

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_responsive.scss
@@ -595,7 +595,15 @@
 			}
 		}
 	}
-
+	.sitemap {
+		.sitemap-section, #sitemap-lore {
+			float: none;
+		}
+		.sitemap-section {
+			width: auto;
+		}
+	}
+	
 	// viewlisting.scss
 	.topiclist {
 		& > li {
