--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -595,6 +595,14 @@
 			}
 		}
 	}
+	.sitemap {
+		.sitemap-section, #sitemap-lore {
+			float: none;
+		}
+		.sitemap-section {
+			width: auto;
+		}
+	}
 
 	// viewlisting.scss
 	.topiclist {
