--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -23,6 +23,8 @@
 								<a class="footer-link" href="{{ U_TERMS_USE }}" title="{{ lang('TERMS_LINK') }}" role="menuitem">
 									<span class="footer-link-text">{{ lang('TERMS_LINK') }}</span>
 								</a>
+								<span class="bullet">&bull;</span>
+								<a href="./sitemap">Sitemap</a>
 								<!-- IF TRANSLATION_INFO --><br />{{ TRANSLATION_INFO }}<!-- ENDIF -->
 								<!-- EVENT overall_footer_copyright_append -->
 								<!-- IF DEBUG_OUTPUT --><br />{{ DEBUG_OUTPUT }}<!-- ENDIF -->
